[tool.poetry]
name = "rtui"
version = "0.1.0"
description = "A TUI tool for ROS1/2"
authors = ["Yuma Hiramatsu <yuma.hiramatsu@gmail.com>"]
license = "Apache License 2.0"

[tool.poetry.scripts]
rtui = "rtui.cli:main"

[tool.poetry.dependencies]
python = "^3.8"
click = "^8.1.3"
netifaces = "^0.11.0"
rich = "^12.0.0"
textual = "^0.1.18"
typing-extensions = "^4.3.0"
npyscreen = "^4.10.5"

PyYAML = { extras = ["ros1"], version = "^6.0", optional = true }
rospkg = { extras = ["ros1"], version = "^1.4.0", optional = true }

numpy = { extras = ["ros2"], version = "^1.23.0", optional = true }

[tool.poetry.extras]
ros1 = ["PyYAML", "rospkg"]
ros2 = ["numpy"]

[tool.poetry.dev-dependencies]
black = "^22.3.0"
flake8 = "^4.0.1"
isort = "^5.10.1"
mypy = "^0.961"
taskipy = "^1.10.2"

[tool.taskipy.tasks]
check = "task check_lint && task check_format && task check_type"
check_lint = "flake8 ."
check_format = "black . --check && isort . --check --diff"
check_type = "mypy rtui --strict"
test = "python -m unittest discover tests -v"

[tool.isort]
profile = "black"

[tool.mypy]
mypy_path = "typings"
show_error_codes = true
ignore_missing_imports = true
strict = true

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
