[tool.poetry]
name = "rtui-app"
version = "0.2.0"
description = "A TUI tool for ROS1/2"
authors = ["Yuma Hiramatsu <yuma.hiramatsu@gmail.com>"]
repository = "https://github.com/eduidl/rtui"
license = "Apache License 2.0"
readme = "README.md"

[tool.poetry.scripts]
rtui = "rtui_app.cli:main"

[tool.poetry.dependencies]
python = "^3.8"
click = "^8.1.3"
textual = "^0.40"
typing-extensions = "^4.3.0"

# ROS1/2
netifaces = "^0.11.0"
# ROS1
PyYAML = "^6.0"
rospkg = "^1.4.0"
# ROS2
numpy = "^1.23.0"

[tool.poetry.dev-dependencies]
black = "^23"
flake8 = { version = "^6", python = "^3.10" }
flake8-pyproject = "^1"
isort = "^5"
mypy = "^1"
taskipy = "^1"

[tool.taskipy.tasks]
check_all = "task check && task check_type"
check = "task check_lint && task check_format"
check_lint = "flake8 rtui_app"
check_format = "black . --check && isort . --check --diff"
check_type = "mypy rtui_app"
format = "black . && isort ."
test = "python -m unittest tests -v"

[tool.isort]
profile = "black"

[tool.flake8]
exclude = ".git,.venv,__pycache__,tests/__init__.py"
ignore = "E501"
max_complexity = 15

[tool.mypy]
mypy_path = "typings"
show_error_codes = true
ignore_missing_imports = true
strict = true

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
